--- a/css/estilos.css
+++ b/css/estilos.css
@@ -143,14 +143,15 @@ body {
     height: 4rem;
     width: auto;
   } */
-  .av__don {
+ .av__don {
     text-align: center;
   }
 
   .btn{
     font-size: 0.8rem;
-    padding: 5%;
-    margin: 5%;
+    padding: 1px;
+    margin-bottom: 1rem;
+    position: relative;
   }
 
 
@@ -161,16 +162,19 @@ body {
     margin: 0px;
   }
 
+  .card-body {
+    padding: 0px;
+  }
+
   .card-title{
-    font-size: 60% !important;
-    margin: 0rem;
-    padding: 0rem;
+    font-size: 0.8rem !important;
+    margin: 0px;
+    padding: 0px;
   }
 
   .card-text{
-    font-size: 70%;
-    
-  }
+    font-size: 1rem;
+    }
 
 }
 
@@ -202,5 +206,3 @@ body {
   }
 
 }
-
-
